[package]
name = "juno-rust-proto"
version = "0.1.1"
authors = [
   "expertdicer@gmail.com"
]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/juno-rust-proto"
description = "Protobuf stuct defintions for interacting Juno blockchain"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.56"

[dependencies]
prost = "0.11"
prost-types = "0.11"
tendermint-proto = "=0.23.9"

# Optional dependencies
tonic = { version = "0.8", optional = true, default-features = false, features = ["codegen", "prost"] }

# [features]
# default = ["grpc-transport"]
# grpc = ["tonic"]
# grpc-transport = ["grpc", "tonic/transport"]
# cosmwasm = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
