[package]
name = "stargate_exchange_rate_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = { version = "0.16.0" }
cosmwasm-std = { vsersion = "1.0.0", features = ["stargate"] }
schemars = "0.8.1"

serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
cw-storage-plus  = { version = "0.16.0" } 
juno-rust-proto = { version = "0.1.2" } 
prost = "0.11.3"
jsonformat = "2.0.0"